[tool.poetry]
name = "linkedin-adk-agent"
version = "0.1.0"
description = ""
authors = ["syntax2 <akadian135@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.34.0"
webdriver-manager = "^4.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
